# StreamStorm

./: .gitignore  BuildAndReleaseApp.bat  CREDITS.md  INSTRUCTIONS.md  Makefile  README.md  StartApp.bat  StreamStorm.spec  apte-ss-config.json  build-and-release-steps  build-and-release-steps.txt  build_and_release.py  commit-message.bat  firebase.json  gitdiffstaged.bat  gitdiffstaged.sh
Engine/: .gitignore  ClearRam.bat  main-old-flask.py  main.py  manual-tweaks.txt  pyproject.toml
Engine/StreamStorm/: Exceptions.py  FastAPI.py  Lib.py  Playwright.py  Profiles.py  Selenium.py  SeparateAccount.py  SeparateInstance.py  StreamStorm.py  UndetectedDrivers.py  Validation.py  __init__.py
Engine/StreamStorm/FastApiLib/: StormStopper.py  exception_handlers.py
Engine/StreamStorm/ai/: llm.py
Engine/StreamStorm/api/: __init__.py  fastapi_app.py  validation.py
Engine/StreamStorm/api/lib/: LifeSpan.py  StormStopper.py  (+1 more)
Engine/StreamStorm/config/: config.py
Engine/StreamStorm/core/: BrowserAutomator.py  Playwright.py  Profiles.py  Selenium.py  SeparateInstance.py  StreamStorm.py  UndetectedDrivers.py  __init__.py
Engine/StreamStorm/utils/: CustomLogger.py  GetIstTime.py  __init__.py  clear_ram.py  exceptions.py
Engine/config/: __init__.py  config.py
Engine/old_files/: prototype.py
Engine/tests/: ai-plan.txt  conftest.py
Engine/tests/api/: test_endpoints_accessibility.py  test_on_engine_busy.py  test_on_storm_data_instantiation.py  test_on_storm_running_already.py
Engine/tests/endpoints/: test_accessibility.py  test_on_engine_busy.py  test_on_storm_running_already.py
Engine/tests/test_endpoints/: test_endpoints_accessible.py
(+306 files in other folders)
