[project]
name = "streamstorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-cors>=6.0.0",
    "flask>=3.1.0",
    "hypercorn>=0.17.3",
    "psutil>=6.1.0",
    "pydantic>=2.10.4",
    "selenium>=4.27.1",
    "webdriver-manager>=4.0.2",
    "platformdirs>=4.3.8",
    "undetected-chromedriver>=3.5.5",
    "undetected-geckodriver>=1.0.7",
    "setuptools>=80.9.0",
]
