[project]
name = "streamstorm"
version = "2.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=6.1.0",
    "pydantic>=2.10.4",
    "selenium>=4.27.1",
    "platformdirs>=4.3.8",
    "undetected-chromedriver>=3.5.5",
    "undetected-geckodriver>=1.0.7",
    "setuptools>=80.9.0",
    "pywebview>=5.4",
    "dgupdater>=1.1.4",
    "fastapi[standard]>=0.115.14",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.46.0",
]
